# neoantigen

./: .gitignore  LICENSE  README.md  environment.yml  predict.py  pyproject.toml  requirements.txt  train.py
pmhctcr_predictor/: deep_model.py  esm_features.py  features.py  model.py
tests/: test_deep_model.py  test_esm_features.py  test_features.py  test_model.py  test_probabilities.py  test_train_predict.py
tests/data/: sample_train.csv
